fixed navbar and horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 html {
@@ -305,6 +306,7 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
+    position: fixed;
 }
 
 #nav-links {
